--- a/views/pages/warehouse/shipper/list.ejs
+++ b/views/pages/warehouse/shipper/list.ejs
@@ -41,7 +41,7 @@
                 <td>
                   <a href='manage/<%=shipper.id%>/get'><i class="fas fa-pen"></i></a>
                   <!-- temporary commenting the code -->
-                  <!-- <a href='#' class='rm-shipper ml-3' data-id='<%=shipper.id%>'><i class="fas fa-trash"></i></a> -->
+                  <a href='#' class='rm-shipper ml-3' data-id='<%=shipper.id%>'><i class="fas fa-trash"></i></a>
                 </td>
               </tr>
               <%})%>
