--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -143,7 +143,7 @@
                     <div class="custom-file-container" data-upload-id="invoice-upload-field-{CID}">
                       <label class="custom-file-container__custom-file">
                         <input type="file" class="custom-file-container__custom-file__custom-file-input" 
-                          name="invoice.file" accept="image/*" aria-label="Choose invoice to upload">
+                          name="invoice.file"  aria-label="Choose invoice to upload">
                         <span class="custom-file-container__custom-file__custom-file-control"></span>
                       </label>
                       <div class="custom-file-container__image-preview my-2"
