--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -141,13 +141,13 @@
                   </div>
                   <div class="col-md-6 col-sm-12">
                     <label>Value</label>
-                    <input type="text" class="form-control" name="invoice.value" />
+                    <input type="number" class="form-control" name="invoice.value" />
                   </div>
                   <div class="col-md-12">
                     <div class="custom-file-container" data-upload-id="invoice-upload-field-{CID}">
                       <label class="custom-file-container__custom-file">
                         <input type="file" class="custom-file-container__custom-file__custom-file-input" 
-                          name="invoice.file" accept="image/*" aria-label="Choose invoice to upload">
+                          name="invoice.file"  aria-label="Choose invoice to upload">
                         <span class="custom-file-container__custom-file__custom-file-control"></span>
                       </label>
                       <div class="custom-file-container__image-preview my-2"
