--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -44,10 +44,10 @@
                     <td><%=helpers.formatDate(awb.createdAt)%></td>
                     <td><a href="manage/<%=awb._id%>/preview"><%=awb.awbId%></a></td>
                     <td><%=helpers.getFullName(awb.customer)%></td>
-                    <td><%=awb.shipper.name %></td>
+                    <td><%=(awb.shipper && awb.shipper.name) ? awb.shipper.name : '' %></td>
                     <td><%=awb.driver ? awb.driver.firstName +' ' + awb.driver.lastName:''%></td>
-                    <td><%=awb.carrier.name %></td>
-                    <td><%=awb.packages.length %></td>
+                    <td><%=(awb.carrier && awb.carrier.name) ? awb.carrier.name : '' %></td>
+                    <td><%=awb.packages ? awb.packages.length : 0 %></td>
                     <td><%=awb.weight %> lbs</td>
                     <!-- <td><% if(awb.invoice) { %>
                       <a class="btn btn-link btn-primary btn-invoice" data-id="<%=awb.invoice%>" data-toggle="tooltip"
@@ -96,8 +96,8 @@
                     <td><%=helpers.formatDate(awb.createdAt)%></td>
                     <td><a href="manage/<%=awb._id%>/preview"><%=awb.awbId%></a></td>
                     <td><%= helpers.getFullName(awb.customer)%></td>
-                    <td><%=awb.shipper.name %></td>
-                    <td><%=awb.carrier.name %></td>
+                    <td><%=(awb.shipper && awb.shipper.name) ? awb.shipper.name :'' %></td>
+                    <td><%=(awb.carrier && awb.carrier.name ) ?awb.carrier.name :'' %></td>
                     <td><%=awb.packages.length %></td>
                     <td><%=awb.weight %></td>
                     <td class="text-center">
@@ -143,9 +143,9 @@
                     <td><%=helpers.formatDate(awb.createdAt)%></td>
                     <td><a href="manage/<%=awb._id%>/preview"><%=awb.awbId%></a></td>
                     <td><%=helpers.getFullName(awb.customer)%></td>
-                    <td><%=awb.shipper.name %></td>
+                    <td><%=(awb.shipper && awb.shipper.name) ? awb.shipper.name :'' %></td>
                     <td><%=awb.driver ? awb.driver.firstName +' ' + awb.driver.lastName:''%></td>
-                    <td><%=awb.carrier.name %></td>
+                    <td><%=(awb.carrier && awb.carrier.name) ? awb.carrier.name : '' %></td>
                     <td><%=awb.packages.length %></td>
                     <td><%=awb.weight %> lbs</td>
                     <!-- <td><% if(awb.invoice) { %>
@@ -197,9 +197,9 @@
                     <td><%=helpers.formatDate(awb.createdAt)%></td>
                     <td><a href="manage/<%=awb._id%>/preview"><%=awb.awbId%></a></td>
                     <td><%=helpers.getFullName(awb.customer)%></td>
-                    <td><%=awb.shipper.name %></td>
+                    <td><%=(awb.shipper && awb.shipper.name) ? awb.shipper.name :'' %></td>
                     <td><%=awb.driver ? awb.driver.firstName +' ' + awb.driver.lastName:''%></td>
-                    <td><%=awb.carrier.name %></td>
+                    <td><%=(awb.carrier && awb.carrier.name) ? awb.carrier.name :'' %></td>
                     <td><%=awb.packages.length %></td>
                     <td><%=awb.weight %> lbs</td>
                     <!-- <td><% if(awb.invoice) { %>
