--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -227,6 +227,7 @@
                     <td><strong>Description</strong></td>
                     <td class="text-center"><strong>Dimension</strong></td>
                     <td class="text-center"><strong>Weight</strong></td>
+                    <td class="text-center"><strong>Volumetric Weight</strong></td>
                     <td class="text-center"><strong>Status</strong></td>
                     <td></td>
                   </tr>
