--- a/views/pages/store/store-check-in.ejs
+++ b/views/pages/store/store-check-in.ejs
@@ -38,11 +38,17 @@
 						<th>AWBID</th>
 						<th>Description</th>
 						<th>Weight</th>
+						<th>Volumetric Weight</th>
 					</tr>
 				</thead>
 				<tbody>
 					<input class="packages" value="<%=JSON.stringify(packages)%>" hidden/>
 					<% packages.forEach(function(pkg,i){ 
+						let check = 1
+						pkg.dimensions.split('x').forEach(data =>{
+							check = check * data
+						})
+						pkg.volumetricWeight = (check/139); 
 						let pmb = pkg.customerId ? pkg.customerId.pmb: 0
 						if((pmb > 0 && pmb <= 1999) || (pmb >= 4000 && pmb <= 4999)) {
 							%>
@@ -57,6 +63,7 @@
 							</a></td>
 						<td><%= pkg.description %></td>
 						<td><%= pkg.weight + ' lbs'%></td>
+						<td><%= pkg.volumetricWeight.toFixed(2) + ' vlbs'%></td>
 					</tr>
 					<%}})%>
 				</tbody>
@@ -87,11 +94,17 @@
 						<th>AWBID</th>
 						<th>Description</th>
 						<th>Weight</th>
+						<th>Volumetric Weight</th>
 					</tr>
 				</thead>
 				<tbody>
 					<input class="packages" value="<%=JSON.stringify(packages)%>" hidden/>
-					<% packages.forEach(function(pkg){ 
+					<% packages.forEach(function(pkg){
+						let check = 1
+						pkg.dimensions.split('x').forEach(data =>{
+							check = check * data
+						})
+						pkg.volumetricWeight = (check/139); 
 						let pmb = pkg.customerId ? pkg.customerId.pmb: 0
 						if((pmb >= 3000 && pmb <= 3999)){%>
 					<tr data-record="<%= pkg.id %>">
@@ -105,6 +118,7 @@
 							</a></td>
 						<td><%= pkg.description %></td>
 						<td><%= pkg.weight + ' lbs'%></td>
+						<td><%= pkg.volumetricWeight.toFixed(2) + ' vlbs'%></td>
 					</tr>
 					<%}})%>
 				</tbody>
