--- a/views/pages/warehouse/awb/list.ejs
+++ b/views/pages/warehouse/awb/list.ejs
@@ -32,6 +32,7 @@
                     <th>Carrier</th>
                     <th>Pieces</th>
                     <th>Weight</th>
+                    <th>Volumetric Weight</th>
                     <!-- <th>Invoice</th> -->
                     <th></th>
                   </tr>
@@ -49,6 +50,7 @@
                     <td><%=(awb.carrier && awb.carrier.name) ? awb.carrier.name : '' %></td>
                     <td><%=awb.packages ? awb.packages.length : 0 %></td>
                     <td><%=awb.weight %> lbs</td>
+                    <td><%=awb.volumetricWeight.toFixed(2) %> vlbs</td>
                     <!-- <td><% if(awb.invoice) { %>
                       <a class="btn btn-link btn-primary btn-invoice" data-id="<%=awb.invoice%>" data-toggle="tooltip"
                         data-original-title="Invoice Attached"> <i class="fa fa-paperclip"></i> </a>
@@ -83,6 +85,7 @@
                     <th>Carrier</th>
                     <th>Pieces</th>
                     <th>Weight</th>
+                    <th>Volumetric Weight</th>
                     <th></th>
                   </tr>
                 </thead>
@@ -100,6 +103,7 @@
                     <td><%=(awb.carrier && awb.carrier.name ) ?awb.carrier.name :'' %></td>
                     <td><%=awb.packages.length %></td>
                     <td><%=awb.weight %></td>
+                    <td><%=awb.volumetricWeight.toFixed(2) %> vlbs</td>
                     <td class="text-center">
                       <a href='manage/<%=awb._id%>/get' class="btn btn-link btn-primary p-1" data-toggle="tooltip"
                         data-original-title="Edit"> <i class="fa fa-pen"></i> </a>
@@ -130,6 +134,7 @@
                     <th>Carrier</th>
                     <th>Pieces</th>
                     <th>Weight</th>
+                    <th>Volumetric Weight</th>
                     <!-- <th>Invoice</th> -->
                     <th></th>
                   </tr>
@@ -148,6 +153,7 @@
                     <td><%=(awb.carrier && awb.carrier.name) ? awb.carrier.name : '' %></td>
                     <td><%=awb.packages.length %></td>
                     <td><%=awb.weight %> lbs</td>
+                    <td><%=awb.volumetricWeight.toFixed(2) %> vlbs</td>
                     <!-- <td><% if(awb.invoice) { %>
                       <a class="btn btn-link btn-primary btn-invoice" data-id="<%=awb.invoice%>" data-toggle="tooltip"
                         data-original-title="Invoice Attached"> <i class="fa fa-paperclip"></i> </a>
@@ -184,6 +190,7 @@
                     <th>Carrier</th>
                     <th>Pieces</th>
                     <th>Weight</th>
+                    <th>Volumetric Weight</th>
                     <!-- <th>Invoice</th> -->
                     <th></th>
                   </tr>
@@ -202,6 +209,7 @@
                     <td><%=(awb.carrier && awb.carrier.name) ? awb.carrier.name :'' %></td>
                     <td><%=awb.packages.length %></td>
                     <td><%=awb.weight %> lbs</td>
+                    <td><%=awb.volumetricWeight.toFixed(2) %> vlbs</td>
                     <!-- <td><% if(awb.invoice) { %>
                       <a class="btn btn-link btn-primary btn-invoice" data-id="<%=awb.invoice%>" data-toggle="tooltip"
                         data-original-title="Invoice Attached"> <i class="fa fa-paperclip"></i> </a>
