--- a/views/pages/warehouse/awb/no-docs.ejs
+++ b/views/pages/warehouse/awb/no-docs.ejs
@@ -34,8 +34,8 @@
               <td><%=awb.customer.pmb %></td>
               <td><a href="manage/<%=awb._id%>/preview"><%=awb.awbId%></a></td>
               <td><%=helpers.getFullName(awb.customer)%></td>
-              <td><%=awb.shipper.name %></td>
-              <td><%=awb.carrier.name %></td>
+              <td><%=(awb.shipper && awb.shipper.name) ?awb.shipper.name : '' %></td>
+              <td><%=(awb.carrier && awb.carrier.name) ? awb.carrier.name : '' %></td>
               <td><%=awb.packages.length %></td>
               <td><%=awb.weight %></td>
               <td>
