--- a/views/pages/dashboard.ejs
+++ b/views/pages/dashboard.ejs
@@ -26,7 +26,7 @@
         <div class="d-flex flex-wrap justify-content-around pb-2 pt-4">
           <div class="px-2 pb-2 pb-md-0 text-center">
             <div id="circles-4"></div>
-            <h6 class="fw-bold mt-3 mb-0">Recieved in NAS</h6>
+            <h6 class="fw-bold mt-3 mb-0">In Warehouse Nassuau</h6>
           </div>
           <div class="px-2 pb-2 pb-md-0 text-center">
             <div id="circles-5"></div>
