--- a/views/pages/report.ejs
+++ b/views/pages/report.ejs
@@ -205,7 +205,7 @@
       1: 'Received in FLL',
       2: 'Loaded on AirCraft',
       3: 'In Transit',
-      4: 'Recieved in NAS',
+      4: 'In Warehouse Nassuau',
       5: 'Ready for Pickup / Delivery',
       6: 'Delivered',
       7: 'No Invoice Present',
