--- a/views/pages/warehouse/awb/create.ejs
+++ b/views/pages/warehouse/awb/create.ejs
@@ -398,6 +398,17 @@
             </div>
           </div>
           <div class='form-group row'>
+              <label for="shipper-country" class="col-md-3 mt-sm-2 text-right">Country</label>
+              <div class="col-md-8">
+              <select id="country" name="country" class=" form-control " required>
+                <% countries.forEach(country => { %>
+                  <option value="<%= country.name%>"> <%= country.name %>
+                  </option>
+                  <% }) %>
+              </select>
+            </div>
+          </div>
+          <div class='form-group row'>
             <label for="shipper-zip" class="col-md-3 mt-sm-2 text-right">Zip</label>
             <div class="col-md-8">
               <input type='text' class='form-control' placeholder="Zip" id='shipper-zip' name="zip" />
