add packages to delivery

--- a/views/pages/warehouse/package/list-all.ejs
+++ b/views/pages/warehouse/package/list-all.ejs
@@ -276,6 +276,12 @@
         </div>
         <div class="modal-body">
           <input type="text" hidden name="packageIds" />
+            <div class="form-group">
+              <label for="location">Location</label>
+              <select id="locationId" name="locationId" class="form-control" required>
+                <option></option>
+              </select>
+            </div>
           <div class="form-group">
             <label for="deliveryId">Delivery</label>
             <select id="deliveryId" name="deliveryId" class="form-control" required>
