--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -83,7 +83,7 @@
               </div>
               <div class="form-group form-show-validation row">
                 <label for="awb-deliveryMethod" class="col-lg-3 col-md-3 col-sm-4 mt-sm-2 text-right">Delivery or
-                  Pickup</label>
+                  <br> Pickup</label>
                 <div class="col-lg-8 col-md-8 col-sm-8">
                   <select id="awb-deliveryMethod" name="deliveryMethod" class='form-control awb-deliveryMethod' data-placeholder="Select">
                     <% [{ label: 'Delivery', value: '1' }, { label: 'Pickup', value: '2' }].forEach(option => { %>
