--- a/views/pages/warehouse/package/aging.ejs
+++ b/views/pages/warehouse/package/aging.ejs
@@ -20,7 +20,7 @@
                                     <th>PMB#</th>
                                     <th>Type</th>
                                     <th>Aging</th>
-                                    <th>Aging $</th>
+                                    <th>Storage Fees</th>
                                     <th>Weight</th>
                                     <th>Number of Pieces</th>
                                     <th>Status</th>
