--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -302,6 +302,13 @@
           <option value="kg">Kg</option>                    
         </select>
       </div>
+
+      <div class='form-group'>
+        <div class="custom-control custom-checkbox">
+        <input type="checkbox" class="custom-control-input" name="express" id="express">
+        <label class="custom-control-label" for="express">Express </label>
+        </div>
+      </div>
       
       <div class='form-group'>
         <label for="packageType">Package Type</label>
@@ -325,7 +332,6 @@
           <div class="col-lg-9 col-md-9 col-sm-9">
             <%const pbarcode = processBarcode?processBarcode.barcode:'';%> 
             <select id="originBarcode" name="originBarcode" class='form-control' required>
-              <option></option>
               <% barcodes.forEach(barcode => { %>
               <option value="<%=barcode.id%>" <%if( pbarcode._id== barcode.id ){%>selected=="selected"<%}%>><%=barcode.barcode%></option>
               <% }) %>
