--- a/views/pages/warehouse/awb/edit.ejs
+++ b/views/pages/warehouse/awb/edit.ejs
@@ -331,7 +331,8 @@
         <div class="row">
           <div class="col-lg-9 col-md-9 col-sm-9">
             <%const pbarcode = processBarcode?processBarcode.barcode:'';%> 
-            <select id="originBarcode" name="originBarcode" class='form-control' required>
+            <select id="originBarcode" name="originBarcode" class='form-control'>
+              <option ></option>
               <% barcodes.forEach(barcode => { %>
               <option value="<%=barcode.id%>" <%if( pbarcode._id== barcode.id ){%>selected=="selected"<%}%>><%=barcode.barcode%></option>
               <% }) %>
