--- a/views/pages/warehouse/awb/preview.ejs
+++ b/views/pages/warehouse/awb/preview.ejs
@@ -105,6 +105,7 @@
                           <tr>
                             <td><strong>S.No</strong></td>
                             <td><strong>Tracking No</strong></td>
+                            <td><strong>Status</strong></td>
                             <td class="text-center"><strong>Description</strong></td>
                             <td class="text-center"><strong>Type</strong></td>
                             <td class="text-center"><strong>Dimensions</strong></td>
@@ -127,6 +128,7 @@
                           <tr>
                             <td>Piece#<%= pick + 1%></td>
                             <td><%= package.trackingNo%></td>
+                            <td><%= package.lastStatusText%></td>
                             <td class="text-center"><%= package.description%></td>
                             <td class="text-center"><%= package.packageType%></td>
                             <td class="text-center"><%= package.dimensions%></td>
@@ -181,7 +183,7 @@
                 </div>
               </div>
               <div class="col-sm-5 col-md-7 transfer-total">
-                <h5 class="sub">Total Amount</h5>
+                <h5 class="sub">Price Total</h5>
                 <div class="price">$<%= awb.invoices.reduce((acc, i) => acc + (!isNaN(i.value) ? Number(i.value) : 0) , 0).toFixed(2) %></div>
                 <% if(Number(awb.isSed) == 1) { %>
                 <span>SED Included</span>
