--- a/views/pages/admin/invoice/list.ejs
+++ b/views/pages/admin/invoice/list.ejs
@@ -4,33 +4,75 @@
     <div class="card">
       <div class="card-header d-flex align-items-left align-items-md-center flex-column flex-md-row">
         <div class="card-title"><%= title %></div>
-       
+
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
-        <table class="display table table-striped table-hover dateRangeFilterTable dataTable invoice-table ">
-          <thead>
-            <tr>
-              <th>Awb Number</th>              
-              <th>Date</th>
-              <th>Invoice</th>
-              <th></th>
-            </tr>
-          </thead>
-          <tbody>
-            <% invoices.forEach(invoice => { %>
-            <tr data-record="<%=invoice._id%>">
-              <td><a class="text-decoration-none" href="/warehouse/nas/awb/manage/<%=invoice.awbId ? invoice.awbId._id: '#'%>/preview"><%= invoice.awbId.awbId %> </a></td>
-              <td><%= helpers.formatDate(invoice.createdAt)%></td>
-              <td><a href="JavaScript:Void(0);"  onclick="downloadInvoice('<%=invoice.fileName%>')">Invoice</td>                          
-              <td><a href="JavaScript:Void(0);"  onclick="deleteInvoice('<%=invoice.fileName%>','<%=invoice._id%>')"><i class="fa fa-trash"></i></td>                          
-              
-            </tr>
-            <% }) %>
-          </tbody>
-        </table>
+          <table class="display table table-striped table-hover dateRangeFilterTable dataTable invoice-table ">
+            <thead>
+              <tr>
+                <th>Awb Number</th>
+                <th>Date Uploaded</th>
+                <th>Invoice</th>
+                <th>View</th>
+                <th></th>
+              </tr>
+            </thead>
+            <tbody>
+              <% invoices.forEach(invoice => { %>
+              <tr data-record="<%=invoice._id%>">
+                <td><a class="text-decoration-none"
+                    href="/warehouse/nas/awb/manage/<%=invoice.awbId ? invoice.awbId._id: '#'%>/preview">
+                    <%= (invoice.awbId) ?invoice.awbId
+                .awbId : '' %> </a></td>
+                <td><%= helpers.formatDate(invoice.createdAt)%></td>
+                <td><a href="JavaScript:Void(0);"
+                    onclick="downloadInvoice('<%=(invoice.fileName) ? invoice.fileName :invoice.filename%>')">Invoice
+                </td>
+                <td>
+                  <button class="btn btn-primary btn-view-invoice-package btn-round float-right ml-md-auto" data-toggle="modal"
+                    data-original-title="View Packages" data-id="<%=invoice._id%>" data-target="#invoice-packages">View</button>
+                </td>
+                <td><a href="JavaScript:Void(0);"
+                    onclick="deleteInvoice('<%=(invoice.fileName) ? invoice.fileName : invoice.filename%>','<%=invoice._id%>')"><i
+                      class="fa fa-trash"></i></td>
+
+              </tr>
+              <% }) %>
+            </tbody>
+          </table>
         </div>
       </div>
+    </div>
+  </div>
+</div>
+
+
+<div class="modal fade" id="invoice-packages"  role="dialog" aria-hidden="true" style="display: none;">
+  <div class="modal-dialog" role="document">
+    <div class="modal-content">
+        <div class="modal-header">
+          <h2 class="modal-title">Invoice Packages</h2>
+          <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+            <span aria-hidden="true">×</span>
+          </button>
+        </div>
+        <div class="modal-body">
+            <table id="invoice-package-table" class="display table table-striped table-hover  dataTable ">
+              <thead>
+                <tr>
+                  <th>Index</th>
+                  <th>Tracking Number</th>
+                  <th>Status</th>
+                </tr>
+              </thead>
+              <tbody id="invoice-package-tbody">
+              </tbody>
+            </table>
+          </div>
+          <div class="modal-footer">
+          <button type="button" class="btn btn-danger close-del" data-dismiss="modal">Close</button>
+        </div>
     </div>
   </div>
 </div>
