--- a/views/pages/admin/user/list.ejs
+++ b/views/pages/admin/user/list.ejs
@@ -8,6 +8,8 @@
       </div>
       <div class="card-body daterangepickerbody">
         <div class="table-responsive">
+          <input type="hidden" name="daterange" id="daterange" value="<%=daterange%>">
+          <input type="hidden" name="clear" id="clear" value="<%=clear%>">
         <table class="display table table-striped table-hover dataTable user-table">
           <thead>
             <tr>
